[gd_scene load_steps=2 format=3 uid="uid://bxrq8de6yw7p8"]

[ext_resource type="Script" uid="uid://mw3w7nouxnrv" path="res://scripts/main_menu_ui.gd" id="1_rayio"]

[node name="main_menu_ui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rayio")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 25.0
offset_top = 126.0
offset_right = 212.0
offset_bottom = 219.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="GameOverHeaderLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "--Main Menu--"
horizontal_alignment = 1

[node name="LevelSelectButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../ExitButton")
text = "Level Select
"

[node name="ExitButton" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../LevelSelectButton")
focus_neighbor_bottom = NodePath("../LevelSelectButton")
text = "Exit
"

[connection signal="pressed" from="PanelContainer/VBoxContainer/LevelSelectButton" to="." method="_on_level_select_button_pressed"]
